Broadway CHAIN - SANDBOX/src/objects/NSNO_Event__c.object
<CustomObject>
    <description>Use for recording NSNO container event, related to which are NSNO stay timeline events</description>
    <fields>
        <fullName>ClientID__c</fullName>
        <formula>Client__r.ClientID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClientID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NSNO Events</relationshipLabel>
        <relationshipName>NSNO_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Count_of_NSNO_referrals__c</fullName>
        <label>Count of NSNO referrals</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_SSOs__c</fullName>
        <label>Count of SSOs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_open_NSNO_referrals__c</fullName>
        <label>Count of open NSNO referrals</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_arrival__c</fullName>
        <label>First arrival</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rough_sleeping_status__c</fullName>
        <label>Rough sleeping status</label>
        <picklist>
            <picklistValues>
                <fullName>New rough sleeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Known rough sleeper with no SSO/local connection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Known rough sleeper with SSO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>NSNO Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NSNO-{00000}</displayFormat>
        <label>NSNO Event ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NSNO Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Rough_sleeper_status_cant_be_changed</fullName>
        <active>true</active>
        <description>Prevent users from editing Rough Sleeping Status once it has initially been recorded (mainly to stop them changing to &quot;Known rough sleeper with SSO&quot; after stay added at location other than High Needs SP)</description>
        <errorConditionFormula>AND(  $User.ProfileId  &lt;&gt;&quot;00e800000014UPq&quot;, ISCHANGED( Rough_sleeping_status__c ) =true, ISPICKVAL(Rough_sleeping_status__c, &quot;Known rough sleeper with SSO&quot;) )</errorConditionFormula>
        <errorDisplayField>Rough_sleeping_status__c</errorDisplayField>
        <errorMessage>Rough Sleeping Status cannot be changed to &quot;Known rough sleeper with SSO&quot; for existing events. If you need to make a change to this field please contact the CHAIN Team on 020 7710 0562 or chain@mungosbroadway.org.uk.</errorMessage>
    </validationRules>
</CustomObject>